<resources>

    <!-- Variables -->
    <string name="user_name">Username</string>

    <!-- general -->
    <string name="app_name">ICup</string>
    <string name="settings">Réglages</string>
    <string name="my_cups">Mes Cups</string>
    <string name="info">Comment utiliser mon ICup?</string>
    <string name="profile">Mon Profile</string>


    <!-- stop watch page -->
    <string name="stop_watch_title">Chronomètres</string>
    <string name="column1">heure</string>
    <string name="column3">temps</string>

    <!-- temporary data -->
    <string name="heure_affon">Heure affond</string>
    <string name="chrono_affon">Chrono de affond</string>

    <string name="heure1">21:36</string>
    <string name="temps1">1.69s</string>

    <string name="heure2">21:49</string>
    <string name="temps2">20s</string>

    <string name="heure3">22:02</string>
    <string name="temps3">43s</string>

    <string name="heure4">22:23</string>
    <string name="temps4">09s</string>

    <string name="drunk_glasses">04</string>

    <!-- stats page -->
    <string name="stats_title">Statistiques</string>
    <string name="first_graph_title">Tous les affonds</string>
    <string name="second_graph_title">Progression</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Nom d\'utilisateur</string>
    <string name="Settings2header">Préférences</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string-array name="personnespartagés">
        <item>Amis uniquement</item>
        <item>tout le monde</item>
    </string-array>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_secondary">SecondaryActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!-- mes cups -->
    <string name="title_mescups">Mes Cups</string>
    <string name="owner_name">Owner</string>
    <string name="counter_affonds">94</string>
    <string name="serial_number">047202000</string>

    <!-- Profile -->
    <string name="change_name">Changer de Pseudo</string>
    <string name="submit">Valider</string>
    <string name="pseudo_show">Pseudo:</string>
    <string name="empty_pseudo">__________</string>


</resources>