<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:background="@color/background_color">

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/bar_color"
        app:layout_constraintBottom_toTopOf="@+id/settings_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="@dimen/default_icon_size"
        android:layout_height="@dimen/default_icon_size"
        android:src="@drawable/icon_back"
        app:layout_constraintEnd_toEndOf="@+id/menu_return_button"
        app:layout_constraintTop_toTopOf="@+id/menu_return_button" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="130dp"


        android:layout_marginTop="70dp"
        android:scaleType="centerCrop"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/icon_user_circle"
        />

    <TextView
        android:id="@+id/username"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <View
        android:id="@+id/settings_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <ImageView
        android:id="@+id/settings_icon"
        android:layout_width="@dimen/default_list_icon_size"

        android:layout_height="@dimen/default_list_icon_size"
        android:layout_marginStart="@dimen/default_margin_start"
        android:src="@drawable/icon_settings_outlined"
        app:layout_constraintBottom_toBottomOf="@+id/settings_view"
        app:layout_constraintStart_toStartOf="@+id/settings_view"
        app:layout_constraintTop_toTopOf="@+id/settings_view" />

    <TextView
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"

        app:layout_constraintBottom_toBottomOf="@+id/settings_view"
        app:layout_constraintStart_toEndOf="@+id/settings_icon"
        app:layout_constraintTop_toTopOf="@+id/settings_view"
        android:layout_marginStart="@dimen/default_margin_start"/>

    <Button
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="@+id/settings_view"
        app:layout_constraintStart_toStartOf="@+id/settings_view"
        app:layout_constraintTop_toTopOf="@+id/settings_view"
        android:background="#00000000"/>

    <View
        android:id="@+id/my_cups_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_view" />

    <ImageView
        android:id="@+id/cup_icon"
        android:layout_width="@dimen/default_list_icon_size"

        android:layout_height="@dimen/default_list_icon_size"
        android:src="@drawable/icon_cup"
        app:layout_constraintBottom_toBottomOf="@+id/my_cups_view"
        app:layout_constraintStart_toStartOf="@+id/my_cups_view"
        app:layout_constraintTop_toBottomOf="@+id/settings_view"
        android:layout_marginStart="@dimen/default_margin_start"/>

    <TextView
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_cups"
        android:layout_marginStart="@dimen/default_margin_start"

        app:layout_constraintBottom_toBottomOf="@+id/my_cups_view"
        app:layout_constraintStart_toEndOf="@+id/cup_icon"
        app:layout_constraintTop_toBottomOf="@+id/settings_view" />

    <Button
        android:id="@+id/my_cups_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="@+id/my_cups_view"
        app:layout_constraintStart_toStartOf="@id/my_cups_view"
        app:layout_constraintTop_toTopOf="@id/my_cups_view"
        android:background="#00000000" />

    <Button
        android:id="@+id/info_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#00000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_cups_view" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/default_list_icon_size"
        android:layout_height="@dimen/default_list_icon_size"
        android:layout_marginStart="@dimen/default_margin_start"
        android:src="@drawable/icon_help"
        app:layout_constraintBottom_toBottomOf="@+id/info_button"
        app:layout_constraintStart_toStartOf="@+id/info_button"
        app:layout_constraintTop_toBottomOf="@+id/my_cups_view" />

    <TextView
        android:id="@+id/textView"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_start"
        android:text="@string/info"
        app:layout_constraintBottom_toBottomOf="@+id/info_button"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/my_cups_view" />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/bar_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_button" />

    <Button
        android:id="@+id/menu_return_button"
        android:layout_width="@dimen/default_icon_size"
        android:layout_height="@dimen/default_icon_size"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="#00000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>